# vcpkg_libp7client

./: .gitignore  CMakeLists.txt  LIB_P7_CLIENTConfig.cmake  README.md  vcpkg.json
cmake/: libp7client.cmake  vcpkg.cmake
demo/: README.md  main.cpp
